--- a/Subpages/home.html
+++ b/Subpages/home.html
@@ -6,6 +6,16 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Test Finished</h1>
+	<div class="navbar">
+		<a href="../index.html"><i class="fas fa-home"></i></a>
+		<a href="#">BAD USB</a>
+		<a href="#">PDF Exploit</a>
+	</div>
+	<div class="textBody">
+		<h1>Paragraph of 150 words</h1>
+		<p>
+			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque enim tenetur, aperiam soluta odit nisi similique impedit consectetur. Tempore delectus saepe ipsa cum fugit eius! Impedit sunt perspiciatis alias. Veniam iure cum voluptatem consequatur provident quis corrupti ut quas magni libero fugit fugiat amet inventore mollitia dolorem maiores aspernatur, quod perferendis ad necessitatibus minima iusto itaque enim tempora? Illum quidem eos recusandae sapiente quas adipisci aliquam vel atque libero? Dicta reprehenderit aliquid amet non dolorum maxime, tempora quas ipsum libero nostrum ducimus explicabo possimus minima aperiam neque perferendis et ut culpa est aliquam quasi ullam? Eos sed a repellendus quae, magni necessitatibus, fugiat ipsum dolorem obcaecati esse nobis pariatur delectus, doloremque incidunt cumque nulla molestias sapiente reiciendis consectetur? Enim, veritatis eius perspiciatis explicabo error adipisci suscipit assumenda ex porro nostrum deleniti incidunt repellat asperiores ut, ab itaque veniam natus optio excepturi. Inventore sit accusantium repellat impedit fugit distinctio placeat et.
+		</p>
+	</div>
 </body>
 </html>
