--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="CSS/mainstyle.css">
 	<link rel="stylesheet" href="CSS/landing.css">
-	<title>Social Engineering | DRAFT</title>
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	
+	<title>TAOI</title>
 </head>
 <body>
 	<div class="landingPage">	
-		<p id="landingPage_Welcome">WELCOME TO</p>
-		<h1 id="landingPage_Header">The Art of Intrusion v2.0</h1>
-		<div class="link">
+		<p data-aos="fade-down" data-aos-duration="1000" id="landingPage_Welcome">WELCOME TO</p>
+		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">The Art of Intrusion v2.0</h1>
+		<div data-aos="fade-up" data-aos-delay="1200" data-aos-duration="1000" class="link">
 			<a href="Subpages/home.html">JUMP IN</a>
 		</div>
 	</div>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>AOS.init();</script>
 </body>
 </html>
