--- a/Subpages/home.html
+++ b/Subpages/home.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="../CSS/home.css">
+	<link rel="stylesheet" href="../CSS/fonts.css">
+	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
+	<title>TAOI | Home</title>
 </head>
 <body>
 	<div class="navbar">
