--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p data-aos="fade-down" data-aos-duration="1000" id="landingPage_Welcome">WELCOME TO</p>
 		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">The Art of Intrusion v2.0</h1>
 		<div data-aos="fade-up" data-aos-delay="1200" data-aos-duration="1000" class="link">
-			<a href="Subpages/home.html">JUMP IN</a>
+			<a href="p/home.html">JUMP IN</a>
 		</div>
 	</div>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
