--- a/p/home.html
+++ b/p/home.html
@@ -39,11 +39,13 @@
 	</div>
 	<div class="cover">
 		<div class="overlay"></div>
-		<h1>An Introduction to Social Engineering</h1>
+		<h1>Introduction <br class="breaker">to<br class="breaker"> Social Engineering</h1>
 	</div>
 	<div class="textBody">
 		<p>
-			Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions.
+			Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions. <br>
+
+
 
 		</p>
 	</div>
