Images added + first draft footer designed

--- a/p/home.html
+++ b/p/home.html
@@ -51,9 +51,7 @@
 			Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions.
 		</p>
 	</div>
-	<script src="../JS.js" crossorigin="anonymous"></script>
-<script rel="javascript" type="text/javascript">
-	$(document).ready(function() {$('.menu-Toggle').click(function() {$('.menu-Toggle').toggleClass('active')
-			$('.menu').toggleClass('active')})})</script>
+	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
+	<script src="/JavaScript/resize.js"></script>
 </body>
 </html>
