--- a/p/baiting.html
+++ b/p/baiting.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../CSS/common.css">
+	<link rel="stylesheet" href="/CSS/baiting.css">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<title>Document</title>
-	<link rel="icon" href="">
 </head>
 <body>
 	<div class="navbar">
@@ -38,9 +39,29 @@
 		</div>
 	</div>
 	<!-- Code Here -->
-	
-<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script><script rel="javascript" type="text/javascript">
-	$(document).ready(function() {$('.menu-Toggle').click(function() {$('.menu-Toggle').toggleClass('active')
-			$('.menu').toggleClass('active')})})</script>
+	<div id="disableFontResize" class="coverImage">
+		<h1>Baiting</h1>
+	</div>
+	<footer>
+		<div id="left">
+			<h3>Address</h3>
+			<br>
+			<p>
+				14 Main Street,<br>
+				Dundrum,<br>
+				Dublin 14<br>
+				<a href="https://g.page/DundrumCollege?share">View on map</a>
+			</p>
+		</div>
+		<div id="right">
+			<h3>Contact Us</h3>
+			<br>
+			<p>
+				<a href="mailto:benjaminbruce914@cfedundrum.com">benjaminbruce914@cfedundrum.com</a><br>
+				<a href="tel:+353 1 298 5412">+353 1 298 5412</a>
+			</p>
+		</div>
+	</footer>
+<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 </body>
 </html>
