--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="CSS/index.css">
-	<link rel="icon" href="/frame-2.ico">
+	<link rel="icon" href="/frame-3.ico">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	
 	<title>TAOI</title>
 </head>
 <body>
-	<div class="landingPage">	
+	<div class="landingPage-desktop">	
 		<p data-aos="fade-down" data-aos-duration="1000" id="landingPage_Welcome">WELCOME TO</p>
-		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">The Art of Intrusion v2.0</h1>
+		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">Social Engineering</h1>
 		<div data-aos="fade-up" data-aos-delay="1200" data-aos-duration="1000" class="link">
+			<a href="p/home.html">JUMP IN</a>
+		</div>
+	</div>
+	<div class="landingPage-mobile">
+		<p id="landingPage_Welcome">Welcome to</p>
+		<h1 id="landingPage_Header">Social Engineering</h1>
+		<div class="link">
 			<a href="p/home.html">JUMP IN</a>
 		</div>
 	</div>
