--- a/p/baiting.html
+++ b/p/baiting.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../CSS/common.css">
 	<link rel="stylesheet" href="/CSS/baiting.css">
+	<link rel="icon" href="/frame-3.ico">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<title>Document</title>
@@ -12,7 +13,7 @@
 <body>
 	<div class="navbar">
 		<div class="desktop">
-			<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
+			<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
 			<a href="baiting.html">Baiting</a>
 			<a href="ransomware.html">Ransomware</a>
 			<a href="pre-texting.html">Pre-texting</a>
@@ -25,7 +26,7 @@
 			<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 			<div class="menu"> <!-- the total container-->
 				<div class="mobile-nav-container">
-					<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
+					<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
 					<a href="baiting.html">Baiting</a>
 					<a href="ransomware.html">Ransomware</a>
 					<a href="pre-texting.html">Pre-texting</a>
@@ -38,7 +39,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- Code Here -->
+	<!-- insert code below -->
 	<div id="disableFontResize" class="coverImage">
 		<h1>Baiting</h1>
 	</div>
@@ -53,12 +54,17 @@
 				<a href="https://g.page/DundrumCollege?share">View on map</a>
 			</p>
 		</div>
+		<div id="center">
+			<h3>Where you can find us</h3>
+			
+		</div>
 		<div id="right">
 			<h3>Contact Us</h3>
 			<br>
 			<p>
 				<a href="mailto:benjaminbruce914@cfedundrum.com">benjaminbruce914@cfedundrum.com</a><br>
 				<a href="tel:+353 1 298 5412">+353 1 298 5412</a>
+
 			</p>
 		</div>
 	</footer>
