--- a/p/home.html
+++ b/p/home.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../CSS/home.css">
 	<link rel="stylesheet" href="../CSS/common.css">
+	<link rel="icon" href="/frame-3.ico">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	
