--- a/p/ransomware.html
+++ b/p/ransomware.html
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 	<!-- Code Here -->
-	<div class="coverImage">
+	<div class="coverImage" title="Image taken by Jefferson Santos, jeffsantos.com.br">
 		<h1>Ransomware</h1>
 	</div>
 <script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
