--- a/p/baiting.html
+++ b/p/baiting.html
@@ -39,11 +39,14 @@
 			</div>
 		</div>
 	</div>
-	<!-- insert code below -->
 	<div id="disableFontResize" class="coverImage">
 		<h1>Baiting</h1>
 	</div>
+	<div class="textBody">
+		<!-- insert code below -->
+	</div>
 	<footer>
+		<!-- this left element holds the address for the college and the link to google maps -->
 		<div id="left">
 			<h3>Address</h3>
 			<br>
@@ -51,19 +54,26 @@
 				14 Main Street,<br>
 				Dundrum,<br>
 				Dublin 14<br>
-				<a href="https://g.page/DundrumCollege?share">View on map</a>
+				<a target="_blank" href="https://g.page/DundrumCollege?share">View on map</a>
 			</p>
 		</div>
+		<!-- this is the central element on the footer which holds the social media information -->
 		<div id="center">
 			<h3>Where you can find us</h3>
-			
+			<div class="socialMediaLinks">
+				<div id="twitter"><a target="_blank" href="https://twitter.com/home?lang=en"><i title="Twitter" class="fab fa-twitter"></i></a></div>
+				<div id="facebook"><a target="_blank" href="#"><i title="Facebook" class="fab fa-facebook"></i></a></div>
+			</div>
+			<p>
+			</p>
 		</div>
+		<!-- this element holds the direct contact information for the website e.g. email or phone number, about us to be added -->
 		<div id="right">
 			<h3>Contact Us</h3>
 			<br>
 			<p>
-				<a href="mailto:benjaminbruce914@cfedundrum.com">benjaminbruce914@cfedundrum.com</a><br>
-				<a href="tel:+353 1 298 5412">+353 1 298 5412</a>
+				<a target="_blank" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query">benjaminbruce914@cfedundrum.com</a><br>
+				<a target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 
 			</p>
 		</div>
