--- a/p/baiting.html
+++ b/p/baiting.html
@@ -11,73 +11,18 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="navbar">
-		<div class="desktop">
-			<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
-			<a href="baiting.html">Baiting</a>
-			<a href="ransomware.html">Ransomware</a>
-			<a href="pre-texting.html">Pre-texting</a>
-			<a href="phishing.html">Phishing</a>
-			<a href="spear-phishing.html">Spear-phishing</a>
-			<a href="water-holing.html">Water-holing</a>
-			<a href="vishing.html">Vishing</a>
+	<div class="main-content">
+		<div id="navbar"></div>
+		<script>$('#navbar').load('common/navbar.html');</script>
+		<div id="disableFontResize" class="coverImage">
+			<h1>Baiting</h1>
 		</div>
-		<div class="mobile">
-			<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
-			<div class="menu"> <!-- the total container-->
-				<div class="mobile-nav-container">
-					<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
-					<a href="baiting.html">Baiting</a>
-					<a href="ransomware.html">Ransomware</a>
-					<a href="pre-texting.html">Pre-texting</a>
-					<a href="phishing.html">Phishing</a>
-					<a href="spear-phishing.html">Spear-phishing</a>
-					<a href="water-holing.html">Water-holing</a>
-					<a href="vishing.html">Vishing</a>
-				</div>
-				
-			</div>
+		<div class="textBody">
+			<!-- insert code below -->
 		</div>
 	</div>
-	<div id="disableFontResize" class="coverImage">
-		<h1>Baiting</h1>
-	</div>
-	<div class="textBody">
-		<!-- insert code below -->
-	</div>
-	<footer>
-		<!-- this left element holds the address for the college and the link to google maps -->
-		<div id="left">
-			<h3>Address</h3>
-			<br>
-			<p>
-				14 Main Street,<br>
-				Dundrum,<br>
-				Dublin 14<br>
-				<a target="_blank" href="https://g.page/DundrumCollege?share">View on map</a>
-			</p>
-		</div>
-		<!-- this is the central element on the footer which holds the social media information -->
-		<div id="center">
-			<h3>Where you can find us</h3>
-			<div class="socialMediaLinks">
-				<div id="twitter"><a target="_blank" href="https://twitter.com/home?lang=en"><i title="Twitter" class="fab fa-twitter"></i></a></div>
-				<div id="facebook"><a target="_blank" href="#"><i title="Facebook" class="fab fa-facebook"></i></a></div>
-			</div>
-			<p>
-			</p>
-		</div>
-		<!-- this element holds the direct contact information for the website e.g. email or phone number, about us to be added -->
-		<div id="right">
-			<h3>Contact Us</h3>
-			<br>
-			<p>
-				<a target="_blank" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query">benjaminbruce914@cfedundrum.com</a><br>
-				<a target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
-
-			</p>
-		</div>
-	</footer>
+	<div id="footer"></div>
+	<script>$("#footer").load("common/footer.html");</script>
 <script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 </body>
 </html>
