--- a/p/home.html
+++ b/p/home.html
@@ -13,45 +13,49 @@
 	<title>TAOI | Home</title>
 </head>
 <body>
-	<div class="navbar">
-		<div class="desktop">
-			<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
-			<a href="baiting.html">Baiting</a>
-			<a href="ransomware.html">Ransomware</a>
-			<a href="pre-texting.html">Pre-texting</a>
-			<a href="phishing.html">Phishing</a>
-			<a href="spear-phishing.html">Spear-phishing</a>
-			<a href="water-holing.html">Water-holing</a>
-			<a href="vishing.html">Vishing</a>
-		</div>
-		<div class="mobile">
-			<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
-			<div class="menu"> <!-- the total container-->
-				<div class="mobile-nav-container">
-					<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
-					<a href="baiting.html">Baiting</a>
-					<a href="ransomware.html">Ransomware</a>
-					<a href="pre-texting.html">Pre-texting</a>
-					<a href="phishing.html">Phishing</a>
-					<a href="spear-phishing.html">Spear-phishing</a>
-					<a href="water-holing.html">Water-holing</a>
-					<a href="vishing.html">Vishing</a>
+	<div class="main-content">
+		<div class="navbar">
+			<div class="desktop">
+				<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
+				<a href="baiting.html">Baiting</a>
+				<a href="ransomware.html">Ransomware</a>
+				<a href="pre-texting.html">Pre-texting</a>
+				<a href="phishing.html">Phishing</a>
+				<a href="spear-phishing.html">Spear-phishing</a>
+				<a href="water-holing.html">Water-holing</a>
+				<a href="vishing.html">Vishing</a>
+			</div>
+			<div class="mobile">
+				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
+				<div class="menu"> <!-- the total container-->
+					<div class="mobile-nav-container">
+						<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
+						<a href="baiting.html">Baiting</a>
+						<a href="ransomware.html">Ransomware</a>
+						<a href="pre-texting.html">Pre-texting</a>
+						<a href="phishing.html">Phishing</a>
+						<a href="spear-phishing.html">Spear-phishing</a>
+						<a href="water-holing.html">Water-holing</a>
+						<a href="vishing.html">Vishing</a>
+					</div>
+					
 				</div>
-				
 			</div>
 		</div>
+		<div class="cover">
+			<video id="video" class="hide" muted loop>
+				<source type="video/mp4" src="/Blurred Video of Scripts Being Typed.mp4">
+			</video> 
+			<h1>Introduction <br class="breaker">to<br class="breaker"> Social Engineering</h1>
+		</div>
+		<div class="textBody">
+			<p>
+				Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions.
+			</p>
+		</div>
 	</div>
-	<div class="cover">
-		<video id="video" class="hide" muted loop>
-			<source type="video/mp4" src="/Blurred Video of Scripts Being Typed.mp4">
-		</video> 
-		<h1>Introduction <br class="breaker">to<br class="breaker"> Social Engineering</h1>
-	</div>
-	<div class="textBody">
-		<p>
-			Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions.
-		</p>
-	</div>
+	<div id="footer"></div>
+	<script>$("#footer").load("common/footer.html");</script>
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 	<script src="/JavaScript/resize.js"></script>
 </body>
