--- a/p/common/navbar.html
+++ b/p/common/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div style="z-index: 12;"class="navbar">
 	<div class="desktop">
 		<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
 		<a href="baiting.html">Baiting</a>
