--- a/p/pre-texting.html
+++ b/p/pre-texting.html
@@ -14,8 +14,8 @@
 <body>
 	<div class="main-content">
 		<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
-		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
-			<h1>pre-texting</h1>
+		<div class="coverImage"><!-- the id="disableFontResize" disables the resizing of text in the media queries -->
+			<h1>Pre-texting</h1>
 		</div>
 		<div class="textBody">
 			<!-- insert content for the page topic below in a 'p' element -->
@@ -23,7 +23,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
-<script>$("#footer").load("common/footer.html");</script>
+<script>("#footer").load("common/footer.html");</script>
 <script>$('#navbar').load('common/navbar.html');</script>
 </body>
 </html>
