--- a/p/pre-texting.html
+++ b/p/pre-texting.html
@@ -23,7 +23,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
-<script>("#footer").load("common/footer.html");</script>
+<script>$("#footer").load("common/footer.html");</script>
 <script>$('#navbar').load('common/navbar.html');</script>
 </body>
 </html>
