--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -13,6 +13,7 @@
 	<div id="center">
 		<h3>Where you can find us</h3>
 		<div class="socialMediaLinks">
+			<div id="instagram"><a target="_blank" href="#"><i title="Instagram" class="fab fa-instagram"></i></a></div>
 			<div id="twitter"><a target="_blank" href="https://twitter.com/home?lang=en"><i title="Twitter" class="fab fa-twitter"></i></a></div>
 			<div id="facebook"><a target="_blank" href="#"><i title="Facebook" class="fab fa-facebook"></i></a></div>
 		</div>
