--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 	<div class="landingPage-desktop">	
 		<p data-aos="fade-down" data-aos-duration="1000" id="landingPage_Welcome">WELCOME TO</p>
-		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">Social Engineering</h1>
+		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">Social Engineering Help</h1>
 		<div data-aos="fade-up" data-aos-delay="1200" data-aos-duration="1000" class="link">
 			<a href="p/home.html">JUMP IN</a>
 		</div>
 	</div>
 	<div class="landingPage-mobile">
 		<p id="landingPage_Welcome">Welcome to</p>
-		<h1 id="landingPage_Header">Social Engineering</h1>
+		<h1 id="landingPage_Header">Social Engineering Help</h1>
 		<div class="link">
 			<a href="p/home.html">JUMP IN</a>
 		</div>
