--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -23,9 +23,14 @@
 	<!-- this element holds the direct contact information for the website e.g. email or phone number, about us to be added -->
 	<div id="right">
 		<h3>Contact Us</h3>
-		<p>
-			<a target="_blank" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query">benjaminbruce914@cfedundrum.com</a><br>
-			<a target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
-		</p>
+		<div class="contactLinks desktop">
+			<a class="desktop" target="_blank" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query">benjaminbruce914@cfedundrum.com</a>
+			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
+		</div>
+		<div class="contactLinks mobile">
+			<div><a class="mobile" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query"><i class="far fa-envelope"></i></a></div>
+			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
+			
+		</div>
 	</div>
 </footer>
