--- a/p/home.html
+++ b/p/home.html
@@ -10,7 +10,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	
 	
-	<title>TAOI | Home</title>
+	<title>SEH | Home</title>
 </head>
 <body>
 	<div class="main-content">
@@ -29,7 +29,7 @@
 				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 				<div class="menu"> <!-- the total container-->
 					<div class="mobile-nav-container">
-						<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
+						<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
 						<a href="baiting.html">Baiting</a>
 						<a href="ransomware.html">Ransomware</a>
 						<a href="pre-texting.html">Pre-texting</a>
