--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -28,7 +28,7 @@
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
-			<div><a class="mobile" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query"><i class="far fa-envelope"></i></a></div>
+			<div><a class="mobile" href="mailto: contact@socialengineeringhelp.com?subject=Customer Query"><i class="far fa-envelope"></i></a></div>
 			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
 			
 		</div>
