--- a/p/common/navbar.html
+++ b/p/common/navbar.html
@@ -1,26 +1,26 @@
 <div class="navbar">
 	<div class="desktop">
-		<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
-		<a href="baiting.html">Baiting</a>
-		<a href="ransomware.html">Ransomware</a>
-		<a href="pre-texting.html">Pre-texting</a>
-		<a href="phishing.html">Phishing</a>
-		<a href="spear-phishing.html">Spear-phishing</a>
-		<a href="water-holing.html">Water-holing</a>
-		<a href="vishing.html">Vishing</a>
+		<a id="homeButton" href="../home/"><i class="fas fa-arrow-left"></i></a>
+		<a href="../baiting/">Baiting</a>
+		<a href="../ransomware/">Ransomware</a>
+		<a href="../pre-texting/">Pre-texting</a>
+		<a href="../phishing/">Phishing</a>
+		<a href="../spear-phishing/">Spear-phishing</a>
+		<a href="../water-holing/">Water-holing</a>
+		<a href="../vishing/">Vishing</a>
 	</div>
 	<div class="mobile">
 		<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 		<div class="menu"> <!-- the total container-->
 			<div class="mobile-nav-container">
-				<a id="homeButton" href="home.html"><i class="fas fa-arrow-left"></i></a>
-				<a href="baiting.html">Baiting</a>
-				<a href="ransomware.html">Ransomware</a>
-				<a href="pre-texting.html">Pre-texting</a>
-				<a href="phishing.html">Phishing</a>
-				<a href="spear-phishing.html">Spear-phishing</a>
-				<a href="water-holing.html">Water-holing</a>
-				<a href="vishing.html">Vishing</a>
+				<a id="homeButton" href="../home/"><i class="fas fa-arrow-left"></i></a>
+				<a href="../baiting/">Baiting</a>
+				<a href="../ransomware/">Ransomware</a>
+				<a href="../pre-texting/">Pre-texting</a>
+				<a href="../phishing/">Phishing</a>
+				<a href="../spear-phishing/">Spear-phishing</a>
+				<a href="../water-holing/">Water-holing</a>
+				<a href="../vishing/">Vishing</a>
 			</div>
 			
 		</div>
