--- a/p/ransomware/index.html
+++ b/p/ransomware/index.html
@@ -4,7 +4,8 @@
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../CSS/common.css">
+	<link rel="stylesheet" href="/CSS/common.css">
+	<link rel="stylesheet" href="../../CSS/ransomware.css">
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
@@ -16,7 +17,7 @@
 	<div class="main-content">
 		<div id="navbar"></div><!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
-			<h1>Water-holing</h1>
+			<h1>Ransomware</h1>
 		</div>
 		<div class="textBody">
 			<!-- insert content for the page topic below in a 'p' element -->
@@ -24,7 +25,7 @@
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
-<script>$("#footer").load("common/footer.html");</script>
-<script>$('#navbar').load('common/navbar.html');</script>
+<script>$("#footer").load("../common/footer.html");</script>
+<script>$('#navbar').load('../common/navbar.html');</script>
 </body>
 </html>
