--- a/p/home/index.html
+++ b/p/home/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../CSS/home.css">
-	<link rel="stylesheet" href="../CSS/common.css">
+	<link rel="stylesheet" href="../../CSS/home.css">
+	<link rel="stylesheet" href="/CSS/common.css">
 	<link rel="icon" href="/frame-3.ico">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
@@ -18,13 +18,13 @@
 		<div class="navbar">
 			<div class="desktop">
 				<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
-				<a href="baiting.html">Baiting</a>
-				<a href="ransomware.html">Ransomware</a>
-				<a href="pre-texting.html">Pre-texting</a>
-				<a href="phishing.html">Phishing</a>
-				<a href="spear-phishing.html">Spear-phishing</a>
-				<a href="water-holing.html">Water-holing</a>
-				<a href="vishing.html">Vishing</a>
+				<a href="/Folder/baiting/">Baiting</a>
+				<a href="/Folder/ransomware/">Ransomware</a>
+				<a href="/Folder/pre-texting/">Pre-texting</a>
+				<a href="/Folder/phishing/">Phishing</a>
+				<a href="/Folder/spear-phishing/">Spear-phishing</a>
+				<a href="/Folder/water-holing/">Water-holing</a>
+				<a href="/Folder/vishing/">Vishing</a>
 			</div>
 			<div class="mobile">
 				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
@@ -56,7 +56,7 @@
 		</div>
 	</div>
 	<div id="footer"></div>
-	<script>$("#footer").load("common/footer.html");</script>
+	<script>$("#footer").load("../common/footer.html");</script>
 	<script src="/JavaScript/navbar.js" crossorigin="anonymous"></script>
 	<script src="/JavaScript/resize.js"></script>
 </body>
