Title changes and link fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="/frame-3.ico">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	
-	<title>TAOI</title>
+	<title>SEH</title>
 </head>
 <body>
 	<div class="landingPage-desktop">	
@@ -23,7 +23,7 @@
 		<p id="landingPage_Welcome">Welcome to</p>
 		<h1 id="landingPage_Header">Social Engineering Help</h1>
 		<div class="link">
-			<a href="p/home.html">JUMP IN</a>
+			<a href="/p/home/">JUMP IN</a>
 		</div>
 	</div>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
