--- a/p/ransomware/index.html
+++ b/p/ransomware/index.html
@@ -11,7 +11,7 @@
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script> <!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<title>Document</title>
+	<title>SEH | Ransomware</title>
 </head>
 <body>
 	<div class="main-content">
