--- a/p/home/index.html
+++ b/p/home/index.html
@@ -18,26 +18,26 @@
 		<div class="navbar">
 			<div class="desktop">
 				<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
-				<a href="/Folder/baiting/">Baiting</a>
-				<a href="/Folder/ransomware/">Ransomware</a>
-				<a href="/Folder/pre-texting/">Pre-texting</a>
-				<a href="/Folder/phishing/">Phishing</a>
-				<a href="/Folder/spear-phishing/">Spear-phishing</a>
-				<a href="/Folder/water-holing/">Water-holing</a>
-				<a href="/Folder/vishing/">Vishing</a>
+				<a href="/p/baiting/">Baiting</a>
+				<a href="/p/ransomware/">Ransomware</a>
+				<a href="/p/pre-texting/">Pre-texting</a>
+				<a href="/p/phishing/">Phishing</a>
+				<a href="/p/spear-phishing/">Spear-phishing</a>
+				<a href="/p/water-holing/">Water-holing</a>
+				<a href="/p/vishing/">Vishing</a>
 			</div>
 			<div class="mobile">
 				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 				<div class="menu"> <!-- the total container-->
 					<div class="mobile-nav-container">
 						<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
-						<a href="baiting.html">Baiting</a>
-						<a href="ransomware.html">Ransomware</a>
-						<a href="pre-texting.html">Pre-texting</a>
-						<a href="phishing.html">Phishing</a>
-						<a href="spear-phishing.html">Spear-phishing</a>
-						<a href="water-holing.html">Water-holing</a>
-						<a href="vishing.html">Vishing</a>
+						<a href="/p/baiting/">Baiting</a>
+						<a href="/p/ransomware/">Ransomware</a>
+						<a href="/p/pre-texting/">Pre-texting</a>
+						<a href="/p/phishing/">Phishing</a>
+						<a href="/p/spear-phishing/">Spear-phishing</a>
+						<a href="/p/water-holing/">Water-holing</a>
+						<a href="/p/vishing/">Vishing</a>
 					</div>
 					
 				</div>
