--- a/p/home/index.html
+++ b/p/home/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../CSS/home.css">
+	<link rel="stylesheet" href="/CSS/home.css">
 	<link rel="stylesheet" href="/CSS/common.css">
 	<link rel="icon" href="/frame-3.ico">
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 	<div class="main-content">
 		<div class="navbar">
 			<div class="desktop">
-				<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
+				<a id="homeButton" href="../../index.html"><i class="fas fa-home"></i></a>
 				<a href="/p/baiting/">Baiting</a>
 				<a href="/p/ransomware/">Ransomware</a>
 				<a href="/p/pre-texting/">Pre-texting</a>
