--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<p data-aos="fade-down" data-aos-duration="1000" id="landingPage_Welcome">WELCOME TO</p>
 		<h1 data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000" id="landingPage_Header">Social Engineering Help</h1>
 		<div data-aos="fade-up" data-aos-delay="1200" data-aos-duration="1000" class="link">
-			<a href="p/home.html">JUMP IN</a>
+			<a href="/p/home/">JUMP IN</a>
 		</div>
 	</div>
 	<div class="landingPage-mobile">
