--- a/p/home/index.html
+++ b/p/home/index.html
@@ -17,7 +17,7 @@
 	<div class="main-content">
 		<div class="navbar">
 			<div class="desktop">
-				<a id="homeButton" href="../../index.html"><i class="fas fa-home"></i></a>
+				<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
 				<a href="/p/baiting/">Baiting</a>
 				<a href="/p/ransomware/">Ransomware</a>
 				<a href="/p/pre-texting/">Pre-texting</a>
