--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -24,7 +24,7 @@
 	<div id="right">
 		<h3>Contact Us</h3>
 		<div class="contactLinks desktop">
-			<a class="desktop" target="_blank" href="mailto: benjaminbruce914@cfedundrum.com?subject=www.socialengineering.com: Customer Query">benjaminbruce914@cfedundrum.com</a>
+			<a class="desktop" target="_blank" href="mailto: contact@socialengineeringhelp.com?subject=Customer Query">Email Us</a>
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
