--- a/p/home/index.html
+++ b/p/home/index.html
@@ -30,7 +30,7 @@
 				<div class="menu-Toggle"></div> <!--This is the icon shown for the toggle action of the navigation bar-->
 				<div class="menu"> <!-- the total container-->
 					<div class="mobile-nav-container">
-						<a id="homeButton" href="../index.html"><i class="fas fa-home"></i></a>
+						<a id="homeButton" href="/"><i class="fas fa-home"></i></a>
 						<a href="/p/baiting/">Baiting</a>
 						<a href="/p/ransomware/">Ransomware</a>
 						<a href="/p/pre-texting/">Pre-texting</a>
