php added + phishing and ransomware content added

--- a/p/ransomware/index.html
+++ b/p/ransomware/index.html
@@ -20,7 +20,37 @@
 			<h1>Ransomware</h1>
 		</div>
 		<div class="textBody">
-			<!-- insert content for the page topic below in a 'p' element -->
+			<h3>Security Definition</h3>
+			<p>
+				Ransomware is malicious software that infects your computer and displays messages demanding a fee to be paid for your system to work again. This class of malware is a criminal moneymaking scheme that can be installed through deceptive links in an email message, instant message, or website. It <b>can lock a computer screen or encrypt important, predetermined files with a password.</b><br>
+			</p>
+			<h3>Examples of Ransomware</h3>
+			<div class="flexImg">
+				<img class="flexImg" src="/images/Ransomware/si-ransomware-101-feature-630x330.webp" alt="money exchange for key">
+			</div>
+			<p>
+				The level of this type of attack varies. Sometimes, users may be bombarded with endless alerts and pop-up messages. Other times, the computer will fail to work at all. Yet, another type of ransomware can impersonate a law enforcement agency by opening a page that appears to be from a local law enforcement office and claiming the computer user was caught performing illegal activities online. Files are then locked in hard-to-crack, encrypted files, making it difficult for users to recover unless the ransom is paid.<br><br>
+				Typical attacks usually ask for $100 to $200. Other attacks seek much more, especially if the attacker knows the data being held hostage would be can cause a significant direct financial loss to a company. As a result, cybercriminals who set up these scams can make big sums of money.
+				<br><br>
+				No matter what the scenario, even if the ransom is paid, there is no guarantee that computer users will be able to fully access their systems again. While some hackers’ direct victims to pay through Bitcoin, MoneyPak or other online methods, attackers could also demand credit card data, adding another level of financial loss.
+				<br>
+			</p>
+			<h3>History of Ransomware</h3>
+			<div style="padding:1rem 0;" class="video-wrapper">
+				<div class="youtubeLink">
+					<iframe width="640" height="360" src="https://www.youtube.com/embed/cdBhPDdji3Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<p>
+				The first cases were reported in Russia in 2005. However, since then, the scams have spread throughout the world, with new types still successfully targeting victims. In September 2013, <em>CryptoLocker</em> surfaced and targeted all versions of Windows! It has successfully infected hundreds of thousands of personal computers and business systems. Victims unknowingly opened emails impersonating customer support services from FedEx, UPS, DHS and other companies. Once activated, the malware's onscreen timer demanded an average payment of $300 within 72 hours. Some versions affected local files and removable media. The United States Computer Emergency Response Team warned the malware had the ability to jump from machine to machine and advised infected computer users to immediately remove infected machines from their networks.
+				<br><br>
+				Kaspersky security experts have been able to decrypt hijacked data, but they admit it is not always possible if the encryption is strong, as is the case with <em>CryptoLocker</em>. It is essential for private users and businesses to regularly back up their computers to prevent the loss of important data.
+				<br>
+			</p>
+			<h3>Prevention and Removal</h3>
+			<p>
+				Computer users should make sure their firewalls are on, avoid questionable websites and be alert when opening any suspicious email messages. Choosing proven antivirus software from a reputable company can help protect your computer against the latest ransomware threats.
+			</p>
 		</div>
 	</div>
 	<div id="footer"></div> <!-- the code for the footer is held on a separate .html file in the 'common' folder -->
