--- a/p/baiting/index.html
+++ b/p/baiting/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../../CSS/baiting.css">
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
 	<script src="https://kit.fontawesome.com/f63f866b99.js" crossorigin="anonymous"></script> <!-- fontawesome provides all the icons throughout the website ie. the social media icons in the footer or the navigation bar -->
+	<script src="/JavaScript/modal.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<title>SEH | Baiting</title>
 </head>
@@ -17,7 +18,31 @@
 		<div id="disableFontResize" class="coverImage"><!-- the id disables the resizing of text in the media queries -->
 			<h1>Baiting</h1>
 		</div>
+	
 		<div class="textBody">
+			<h3>What is Baiting?</h3>
+			<p>
+				Baiting is an attack where a hacker or pen tester tests the training of staff or and intended person/personnel in a working place , or place of operation. Baiting techniques are ways in which they can gain control or access to a system or network, simply by knowing a couple of things about the target. A few simple things , such as who works on the premises, or what their role is. A name or two is all that is required. <br>
+			</p>
+			
+			</div>
+				<div class="video-wrapper">
+					<div class="youtubeLink">
+						<iframe width="893" height="489" src="https://www.youtube.com/embed/5Lkb-aannsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			<p>
+				After retrieving this information, they can choose from a variety of baiting attack options. These options are constantly evolving and changing to compete with more robust company security protocols. The most basic attack would be where your target works at a desk and have an anonymous envelope addressed to him/her with baiting equipment / apparatus included with instructions to immediately update their software/PC and returning the files to an off-site location. There is a high probability that your target would not have the highest level of computer literacy, thus allowing the pen tester to take advantage and gain access to the network. The delivery of the equipment may vary, but the main principles remain the same for all baiting attacks. Anonymity as well as understanding the basics of the target are key. <br>
+			</p>
+			<p>
+				A good example of where a case can go wrong is if a staff member loses a USB drive of important files or documents. It seems ludicrous that some large companies store some of their data on USB drives instead of opting for a more secure method. This leaves the company incredibly vulnerable to human error. This can be something discovered whilst pen testing.
+			</p>
+			<div class="flexImg">
+				<img class="flexImg" src="/images/Baiting/sebastian-grochowicz-7NmWj7F6eoA-unsplash.jpg" alt="Image taken by Sebastian Grochowicz" title="Image taken of Heathrow Airport by Sebastian Grochowicz">
+			</div>
+			<p>
+				<b>Heathrow</b> Airport has been fined £120,000 by the <em>Information Commissioner’s Office</em> for serious data protection failings. It came after a staff member lost a USB drive containing <em>sensitive personal data</em>, which was later found by a member of the public in October 8<sup>th</sup>, 2018.
+			</p>
 			<!-- insert content for the page topic below in a 'p' element -->
 		</div>
 	</div>
