--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -34,7 +34,16 @@
 		</div>
 	</div>
 </footer>
-<div style="color:var(--text-color-override);display:flex;justify-content: space-between; background-color: var(--navy-theme);font-family: 'roboto';padding-left: 1rem;padding-bottom: 0.5rem;font-size: 0.7rem;margin-top: -0.7rem;padding-right: 0.7rem;">
-	<div><p>Social Engineering Help &copy; 1990-2020</p></div>
+<div style="
+color:var(--text-color-override);
+display:flex;
+justify-content: space-between;
+background-color: var(--navy-theme);
+font-family: 'roboto';padding-left: 1rem;
+padding-bottom: 0.5rem;
+font-size: 0.7rem;
+margin-top: -0.7rem;
+padding-right: 0.7rem;">
+	<div><p>Social Engineering Help &copy;2020 - 2021</p></div>
 	<div><p>Brought to you by CFE Dundrum Network Security</p></div>
 </div>
