Vishing and water-holing added

--- a/p/common/footer.html
+++ b/p/common/footer.html
@@ -13,9 +13,9 @@
 	<div id="center">
 		<h3>Where you can find us</h3>
 		<div class="socialMediaLinks">
-			<div id="instagram"><a target="_blank" href="#"><i title="Instagram" class="fab fa-instagram"></i></a></div>
-			<div id="twitter"><a target="_blank" href="https://twitter.com/home?lang=en"><i title="Twitter" class="fab fa-twitter"></i></a></div>
-			<div id="facebook"><a target="_blank" href="#"><i title="Facebook" class="fab fa-facebook"></i></a></div>
+			<div id="instagram"><a target="_blank" href="https://www.instagram.com/socialenghelp/"><i title="Instagram" class="fab fa-instagram"></i></a></div>
+			<div id="twitter"><a target="_blank" href="https://twitter.com/socialenghelp"><i title="Twitter" class="fab fa-twitter"></i></a></div>
+			<div id="facebook"><a target="_blank" href="https://www.facebook.com/Social-Engineering-Help-102144815121771"><i title="Facebook" class="fab fa-facebook"></i></a></div>
 		</div>
 		<p>
 		</p>
@@ -24,10 +24,12 @@
 	<div id="right">
 		<h3>Contact Us</h3>
 		<div class="contactLinks desktop">
+			<a class="desktop" href="/p/resources/">Resources</a>
 			<a class="desktop"  href="/">Email Us</a>
 			<a class="desktop" target="_blank" href="tel:+353 1 298 5412">+353 1 298 5412</a>
 		</div>
 		<div class="contactLinks mobile">
+			<div><a class="mobile" href="/p/resources/"><i class="far fa-file-pdf"></i></a></div>
 			<div><a class="mobile" href="mailto: contact@socialengineeringhelp.com?subject=Customer Query"><i class="far fa-envelope"></i></a></div>
 			<div><a class="mobile" href="tel:+353 1 298 5412"><i class="fas fa-phone"></i></a></div>
 			
