--- a/p/home/index.html
+++ b/p/home/index.html
@@ -50,8 +50,19 @@
 			<h1>Introduction <br class="breaker">to<br class="breaker"> Social Engineering</h1>
 		</div>
 		<div class="textBody">
+			<h3>What is Social Engineering</h3>
 			<p>
-				Social engineering is the act of tricking someone into divulging information or taking action, usually throught technology. The purpose of social engineering is to take advantage of a potenial victim's natural tendencies and emotional reactions.
+				Social engineering is the psychological manipulation of people into performing actions or divulging <em>confidential information</em>. It is a trick employed for the purpose of information gathering, fraud, or system access. Social Engineering is a more simplistic approach than some other more complex fraud schemes, but they can be just as, if not more, effective. Most people will have an email account, a social media presence or a phone. All these things can be turned against you when a person wants to gain information about you.
+			</p>
+			<div class="video-wrapper">
+				<div class="youtubeLink">
+					<iframe width="945" height="532" src="https://www.youtube.com/embed/Vo1urF6S4u0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<h3>What is the aim of this site</h3>
+			<p>
+				The aim of this site is to help people protect themselves from attacks that require little (if any) code used. We will identify the different ways that someone can gain information about you. <br>
+				Resources will be provided to help inform you about the constantly changing landscape.
 			</p>
 		</div>
 	</div>
