--- a/p/water-holing/index.html
+++ b/p/water-holing/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
+	<link rel="stylesheet" href="/CSS/water-holing.css">
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
@@ -19,6 +20,32 @@
 			<h1>Water-holing</h1>
 		</div>
 		<div class="textBody">
+			<h3>What is a Watering Hole Attack?</h3>
+			<p>
+				A watering hole is an attack aimed towards targeting individuals or users within an organisation. <br>
+				It begins with an attacker profiling and analysing the target to determine frequently visited websites. For each website, the attacker will attempt to find any weaknesses and vulnerabilities on the website that could give them control over it.
+				<br><br>
+				The attacker will then compromise the target website and will inject malicious code into the now compromised website. Once the malicious code has been injected all the attacker will need to do now is wait for a user within the targeted organisation to visit the compromised website.
+				<br><br>
+				Once a user has connected to the website, the attacker can now complete the attack and infect the user’s computer; giving them access to the organisations network. Once the attacker has access to the org's network, it will only be a matter of time before another user's device will also be infected by the malicious code.
+				<br><br>
+				Watering hole attacks usually only target legitimate websites that would be frequently visited by the users within the organisation, as to avoid any suspicion from the user. For example, the Forbes website back in 2015 was subject to this exact type of attack where a Chinese hacker group discovered a vulnerability in Microsoft's Internet Explorer and Adobe's Flash Player.
+				<br><br>
+				Security group, Invincea discovered that the attack had targeted a small number of government sectors including defense and financial industries.
+			</p>
+			<div class="video-wrapper">
+				<div class="youtubeLink">
+					<iframe width="640" height="360" src="https://www.youtube.com/embed/RNWiqj_lkcs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<h3>How to prevent a Watering Hole attack</h3>
+			<p>
+				The discovery of a watering hole attack is difficult to be discovered by a user without the use of tools to investigate and identify any modifications to the websites source code.
+				<br><br>
+				The general guidelines for preventing this type of attack is to ensure the latest software is installed across all devices connected to the organisations network. This ensures the latest security patches are installed and implemented.
+				<br><br>
+				Another prevention method of detecting a watering hole attack is monitoring bandwidth usage across the network, which will allow detecting a large, unusual usage of bandwidth by a particular user. By monitoring the bandwidth incoming and outgoing, an organisation's security team will be able to identify when and where large file transfers are occurring or whenever there is a significant number of Downloads from certain network shares.
+			</p>
 			<!-- insert content for the page topic below in a 'p' element -->
 		</div>
 	</div>
