--- a/p/vishing/index.html
+++ b/p/vishing/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/CSS/common.css">
+	<link rel="stylesheet" href="/CSS/vishing.css">
 	<!-- Add stylesheet for specific page below -->
 
 	<link rel="icon" href="/frame-3.ico"> <!-- this is the favicon for the website -->
@@ -19,6 +20,26 @@
 			<h1>Vishing</h1>
 		</div>
 		<div class="textBody">
+			<h3>What is Vishing</h3>
+			<p>
+				Vishing attacks are conducted by making calls or leaving voice messages claiming to be part of a reputable organization (eg. banks, government department, etc.). The attacker attempts to convince the victim into providing sensitive personal information such as bank details or payment information.
+			</p>
+			<div class="video-wrapper">
+				<div class="youtubeLink">
+					<iframe width="806" height="453" src="https://www.youtube.com/embed/BEHl2lAuWCk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<h3>How can you Identify a Vishing attack?</h3>
+			<p>
+				Often attackers may be aware of only a certain amount of your information. Asking for confirmation of your full name, account number or other personally identifiable information that the company they claim to represent should have can be a good way to identify a scam. <br>
+				Additionally Vishers will often create a sense of urgency in order to put pressure on the victim into making poor decisions due to being distracted/not taking time to think the situation through.
+			</p>
+			<div class="flexImg"><img src="/images/vishing/what-is-vishing-bank.jpg" alt="" class="flexImg"></div>
+			<h3>How to protect yourself</h3>
+			<p>
+				If you aren't familiar with a number that is calling then always be cautious when answering the phone.
+				Be aware of the tactics that a Vishing attack might use so that you can avoid them if they happen.
+			</p>
 			<!-- insert content for the page topic below in a 'p' element -->
 		</div>
 	</div>
